test/files/neg/virtpatmat_exhaust_big.check
virtpatmat_exhaust_big.scala:29: warning: match may not be exhaustive.
It would fail on the following input: Z11()
  def foo(z: Z) = z match {
                  ^
1 warning
error: No warnings can be incurred under -Werror.
